Corrected CSS so that there is no wide gap btwn end of line and right border.

--- a/styles/options.css
+++ b/styles/options.css
@@ -9,6 +9,10 @@ body {
     margin-right: 10px;
 }
 
+.right fieldset {
+    width: 1020px;
+}
+
 .icon {
     font-size: 1.5em;
 }
